// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Error page > should be able to render the error page even without an error 1`] = `
<body>
  <section
    class="error-message svelte-xa69t0"
  >
    <div
      class="dusk-card error-message__card"
    >
       
      <p
        class="error-message__card-content"
      >
        Error 
        200
        <br />
         
        
      </p>
       
    </div>
    
  </section>
</body>
`;

exports[`Error page > should render the error page 1`] = `
<body>
  <section
    class="error-message svelte-xa69t0"
  >
    <div
      class="dusk-card error-message__card"
    >
       
      <p
        class="error-message__card-content"
      >
        Error 
        500
        <br />
         
        some error message
      </p>
       
    </div>
    
  </section>
</body>
`;
